Fixed alignment

--- a/main.css
+++ b/main.css
@@ -87,7 +87,7 @@ h2 {
 .linksContainer {
   min-height: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   gap: 20px;
   flex-wrap: wrap;
 }
